# osIROSE-new

./: .Jenkinsfile  .appveyor.yml  .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis-coverity-scan-build.sh  .travis.yml  AZGStudioProjectSettings.props  CMakeLists.txt  CODE_OF_CONDUCT.md  Documentation.md  Doxyfile  README.md  TODO.md  appveyor.yml  clear_cache.txt  codecov.yml  install_dependencies.sh  osIROSE.sln  setupEnv.sh  unix_env_setup.sh  windows_env_setup.ps1
Char Server/: .cproject  CMakeLists.txt  CharServer.vcxproj  charclient.cpp  charpackets.cpp  charserver.cpp  charserver.h  clan.cpp  community.cpp  datatypes.h  extrafunctions.cpp  main.cpp  signal.cpp
CharServer/: .cproject  .project  CMakeLists.txt  CharServer.vcxproj  CharServer.vcxproj.filters  charclient.cpp  charpackets.cpp  charserver.cpp  charserver.h  clan.cpp  community.cpp  datatypes.h  main.cpp  signal.cpp
CharServer/src/: main.cpp
Common/: .cproject  .project  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  SocketBase.cpp  SocketClient.cpp  SocketServer.cpp  config.cpp  config.h  crosecrypt.cpp  crosecrypt.hpp  ePacketType.h  globals.cpp  ini_parser.cpp  log.cpp  log.h  rosecrypt.cpp  rosecrypt.hpp  sockets.h
Common/database/: database.cpp  database.h
Common/include/: crosecrypt.hpp  ePacketType.h  ini_parser.h
Common/src/: ini_parser.cpp
Login Server/: .cproject  .project  CMakeLists.txt  LoginServer.vcxproj  datatype.h  loginpackets.cpp  loginserver.cpp  loginserver.h  main.cpp  signal.cpp
LoginServer/: .project  CMakeLists.txt  LoginServer.vcxproj  LoginServer.vcxproj.filters  datatype.h  loginclient.cpp  loginpackets.cpp  loginserver.cpp  loginserver.h  main.cpp
UnitTest/: .cproject  .project  CMakeLists.txt  UnitTest.vcxproj  UnitTest.vcxproj.filters  main.cpp
World Server/: .cproject  .project  Buff.cpp  CMakeLists.txt  MonsterEvents.cpp  Party.cpp  ServerFunctions.cpp  WorldMonster.h  WorldServer.h  WorldServer.vcxproj  battle.cpp  buff.cpp  character.cpp  character.h  charfunctions.cpp  chartype.h  clan.cpp  datatypes.h  extrafunctions.cpp  gmcmds.cpp  itemdata.cpp  main.cpp  mainprocess.cpp  mapfunctions.cpp  monsterevents.cpp  monsterfunctions.cpp  monsterstats.cpp  party.cpp  party.h  player.cpp  player.h  playerdata.cpp  playerfunctions.cpp  serverfunctions.cpp  startup.cpp  strhashing.cpp  worldmap.cpp  worldmap.h  worldmonster.cpp  worldmonster.h  (+4 more)
World Server/aip/: AiActions.cpp  AiActions.h  AiConditions.cpp  AiConditions.h  Aip.cpp  Aip.h  aiactions.cpp  aiconditions.cpp  aip.cpp
World Server/quest/: CIntStb.hpp  CRoseArray.hpp  CRoseFile.hpp  QuestActions.h  QuestConditions.cpp  QuestConditions.h  QuestTrigger.h  Quests.cpp  crosefile.hpp  questactions.cpp  questconditions.cpp  quests.cpp  questtrigger.h
doc/: CMakeLists.txt  osirose.in
doc/UML_osIROSE/: project.conf
doc/UML_osIROSE/.runtime/: lock.info  projectInfo.html
doc/doxygen/html/: allocators_8h.html  allocators_8h__dep__incl.map  allocators_8h__dep__incl.md5  allocators_8h__incl.map  allocators_8h__incl.md5  allocators_8h_source.html  annotated.html  biginteger_8h.html  biginteger_8h__dep__incl.map  biginteger_8h__dep__incl.md5  biginteger_8h__incl.map  biginteger_8h__incl.md5  biginteger_8h_source.html  bin2ascii_8h.html  bin2ascii_8h__dep__incl.map  bin2ascii_8h__dep__incl.md5  bin2ascii_8h__incl.map  bin2ascii_8h__incl.md5  bin2ascii_8h_source.html  ccharclient_8cpp.html  ccharclient_8cpp__incl.map  ccharclient_8cpp__incl.md5  ccharclient_8h.html  ccharclient_8h__dep__incl.map  ccharclient_8h__dep__incl.md5  ccharclient_8h__incl.map  ccharclient_8h__incl.md5  ccharclient_8h_source.html  ccharisc_8cpp.html  ccharisc_8cpp__incl.map  ccharisc_8cpp__incl.md5  ccharisc_8h.html  ccharisc_8h__dep__incl.map  ccharisc_8h__dep__incl.md5  ccharisc_8h__incl.map  ccharisc_8h__incl.md5  ccharisc_8h_source.html  ccharserver_8cpp.html  ccharserver_8cpp__incl.map  ccharserver_8cpp__incl.md5  (+914 more)
doc/doxygen/latex/: allocators_8h.tex  allocators_8h__dep__incl.md5  allocators_8h__incl.md5  annotated.tex  biginteger_8h.tex  biginteger_8h__dep__incl.md5  biginteger_8h__incl.md5  bin2ascii_8h.tex  bin2ascii_8h__dep__incl.md5  bin2ascii_8h__incl.md5  ccharclient_8cpp.tex  ccharclient_8cpp__incl.md5  ccharclient_8h.tex  ccharclient_8h__dep__incl.md5  ccharclient_8h__incl.md5  ccharisc_8cpp.tex  ccharisc_8cpp__incl.md5  ccharisc_8h.tex  ccharisc_8h__dep__incl.md5  ccharisc_8h__incl.md5  ccharserver_8cpp.tex  ccharserver_8cpp__incl.md5  ccharserver_8h.tex  ccharserver_8h__dep__incl.md5  ccharserver_8h__incl.md5  cdatabase__manager_8cpp.tex  cdatabase__manager_8cpp__incl.md5  cdatabase__manager_8h.tex  cdatabase__manager_8h__dep__incl.md5  char_2src_2main_8cpp.tex  char_2src_2main_8cpp__incl.md5  classAutoUTFInputStream.tex  classAutoUTFOutputStream.tex  classCCharClient.tex  classCCharClient__coll__graph.md5  classCCharClient__inherit__graph.md5  classCCharISC.tex  classCCharISC__coll__graph.md5  classCCharISC__inherit__graph.md5  classCCharServer.tex  (+346 more)
src/: AZGStudioProjectSettings.props  CMakeLists.txt  findenum.py  packetGenerator.py
src/bot/: CMakeLists.txt  bot.md
src/bot/include/: char_client.h  client.h  login_client.h  map_client.h
src/bot/scenarios/: login.xml
src/bot/src/: char_client.cpp  client.cpp  login_client.cpp  main.cpp  map_client.cpp
src/char/: CMakeLists.txt  CharServer.vcxproj  char.md
src/char/include/: cache.h  ccharclient.h  ccharisc.h  party.h  (+2 more)
src/core/: .cproject  .gitignore  .project  CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  core.md
src/login/: CMakeLists.txt  LoginServer.vcxproj  login.md
src/map/: CMakeLists.txt  WorldServer.vcxproj  map.md
src/node/: CMakeLists.txt  node.md
src/proto/: CMakeLists.txt  configfile.proto  iscpackets.proto
src/rosecommon/: CMakeLists.txt  RoseCommon.vcxproj  RoseCommon.vcxproj.filters  rosecommon.md
src/tests/: .cproject  CMakeLists.txt  UnitTest.vcxproj  UnitTest.vcxproj.filters  main.cpp  test_network_asio.cpp  tests.md
tools/: CMakeLists.txt
tools/stress/: CMakeLists.txt  main.cpp
(+2166 files in other folders)
